# chip8-emulator

./: .gitignore  CMakeLists.txt  README.md
include/: chip8.hpp  random.hpp
src/: chip8.cpp  chip8.hpp  main.cpp
